# auto-georeference-historical-aerial-imagery

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
src/auto_georef/: __init__.py  __main__.py  batch.py  config.py  diagnostics.py  main.py  pipeline.py
src/auto_georef/graph/: __init__.py  image_graph.py  osm_graph.py  osm_water.py
src/auto_georef/matching/: __init__.py  combined_matcher.py  features.py  ransac.py  shoreline_matcher.py  spectral.py
src/auto_georef/preprocessing/: __init__.py  enhancement.py  road_extraction.py  water_extraction.py
